--- a/.config/mako/config
+++ b/.config/mako/config
@@ -1,1 +1,9 @@
 default-timeout=5000
+border-size=0
+background-color=#00000066
+font=Roboto 11
+width=450
+height=300
+padding=20
+border-radius=10
+anchor=bottom-right
