--- a/.config/sway/config
+++ b/.config/sway/config
@@ -242,6 +242,9 @@ input type:pointer {
     accel_profile flat
     pointer_accel -0.1
 }
+input type:tablet_tool{
+    tool_mode * absolute
+}
 input type:keyboard {
     xkb_layout us,ru
     xkb_options grp:alt_shift_toggle
