--- a/.config/sway/config
+++ b/.config/sway/config
@@ -244,6 +244,7 @@ input type:pointer {
 }
 input type:tablet_tool {
     tool_mode * absolute
+    map_to_output *
 }
 input type:keyboard {
     xkb_layout us,ru
