--- a/.config/sway/config
+++ b/.config/sway/config
@@ -246,6 +246,7 @@ input type:tablet_tool {
     tool_mode * absolute
     map_to_output *
 }
+input 0:0:OpenTabletDriver_Virtual_Tablet events disabled
 input type:keyboard {
     xkb_layout us,ru
     xkb_options grp:alt_shift_toggle
