--- a/.config/sway/config
+++ b/.config/sway/config
@@ -242,12 +242,16 @@ input type:pointer {
     accel_profile flat
     pointer_accel -0.1
 }
+
 input type:tablet_tool {
     tool_mode * absolute
     map_to_output *
 }
-input 0:0:OpenTabletDriver_Virtual_Tablet events disabled
-input 0:0:OpenTabletDriver_Virtual_Artist_Tablet events enabled
+
+input 0:0:OpenTabletDriver_Virtual_Tablet {
+
+}
+
 input type:keyboard {
     xkb_layout us,ru
     xkb_options grp:alt_shift_toggle
