--- a/.config/sway/config
+++ b/.config/sway/config
@@ -238,23 +238,23 @@ bindsym F1 exec swaymsg [app_id="terminal_scratchpad"] scratchpad show
 
 exec termite --name=terminal_scratchpad
 
-input type:pointer {
-    accel_profile adaptive
-    pointer_accel 1
-}
+# input type:pointer {
+#     accel_profile adaptive
+#     pointer_accel 1
+# }
 
-input type:tablet_tool {
-    tool_mode * absolute
-    map_to_output *
-}
+# input type:tablet_tool {
+#     tool_mode * absolute
+#     map_to_output *
+# }
 
-input 0:0:OpenTabletDriver_Virtual_Artist_Tablet {
+# input 0:0:OpenTabletDriver_Virtual_Artist_Tablet {
 
-}
+# }
 
-input 0:0:OpenTabletDriver_Virtual_Tablet {
-  events enabled
-}
+# input 0:0:OpenTabletDriver_Virtual_Tablet {
+#   events enabled
+# }
 
 input type:keyboard {
     xkb_layout us,ru
