--- a/.config/sway/config
+++ b/.config/sway/config
@@ -238,10 +238,10 @@ bindsym F1 exec swaymsg [app_id="terminal_scratchpad"] scratchpad show
 
 exec termite --name=terminal_scratchpad
 
-# input type:pointer {
-#     accel_profile adaptive
-#     pointer_accel 1
-# }
+input 4152:4996:SteelSeries_Rival_Gaming_Mouse {
+    accel_profile flat
+    pointer_accel 0.1
+}
 
 # input type:tablet_tool {
 #     tool_mode * absolute
