--- a/.config/sway/config
+++ b/.config/sway/config
@@ -253,7 +253,7 @@ input 4152:4996:SteelSeries_Rival_Gaming_Mouse {
 # }
 
 input 0:0:OpenTabletDriver_Virtual_Tablet {
-  tap enabled
+drag enabled
 }
 
 input type:keyboard {
