--- a/.config/sway/config
+++ b/.config/sway/config
@@ -254,7 +254,7 @@ input 4152:4996:SteelSeries_Rival_Gaming_Mouse {
 
 input 0:0:OpenTabletDriver_Virtual_Tablet {
     drag enabled
-    dwt enabled
+    dwt disabled
 }
 
 input type:keyboard {
