--- a/.config/sway/config
+++ b/.config/sway/config
@@ -218,6 +218,7 @@ exec --no-startup-id ~/.dropbox-dist/dropboxd
 exec --no-startup-id /usr/lib/kdeconnectd
 
 exec_always  guake
+exec ~/import-gsettings.sh
 exec --no-startup-id redshift-gtk
 
 exec --no-startup-id setxkbmap us,ru -option 'grp:alt_shift_toggle'
