--- a/.config/sway/config
+++ b/.config/sway/config
@@ -43,6 +43,7 @@ bindsym XF86AudioNext exec  --no-startup-id dbus-send --print-reply --dest=org.m
 bindsym XF86AudioPrev exec  --no-startup-id dbus-send --print-reply --dest=org.mpris.MediaPlayer2.spotify /org/mpris/MediaPlayer2 org.mpris.MediaPlayer2.Player.Previous
 
 bindsym Print exec grim -g "$(slurp -d)" - | wl-copy -t image/png
+bindsym Ctrl+Print exec grim -g "$(slurp -d)" ~/Pictures/
 
 bindsym $mod+x kill
 
