--- a/.config/sway/config
+++ b/.config/sway/config
@@ -44,10 +44,7 @@ bindsym XF86AudioPrev exec  --no-startup-id dbus-send --print-reply --dest=org.m
 
 bindsym Print exec grim -g "$(slurp -d)" - | wl-copy -t image/png
 bindsym Ctrl+Print exec grim -g "$(slurp -d)" ~/Pictures/$(date +'%s_grim.png')
-# bindsym Shift+Print exec grim -g "$(swaymsg -t get_tree | jq -j '.. | select(.type?) | select(.focused).rect | "\(.x),\(.y) \(.width)x\(.height)"')" - | wl-copy -t image/png
-for_window [title="imv.*screenshot"] floating enable
-for_window [title="imv.*screenshot"] fullscreen on
-bindsym Shift+Print exec ~/.config/sway/screenshot.sh
+bindsym Shift+Print exec grim -g "$(swaymsg -t get_tree | jq -j '.. | select(.type?) | select(.focused).rect | "\(.x),\(.y) \(.width)x\(.height)"')" - | wl-copy -t image/png
 
 bindsym $mod+x kill
 
