Update 16:06 Tue, 28 Sep

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -1,5 +1,9 @@
 set $mod Mod4
 
+exec systemctl --user import-environment DISPLAY WAYLAND_DISPLAY SWAYSOCK
+exec hash dbus-update-activation-environment 2>/dev/null && \
+     dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK
+
 default_border pixel 0
 default_floating_border normal
 
