Update 22:00 Wed, 06 Oct

--- a/.config/sway/conf.d/exec.conf
+++ b/.config/sway/conf.d/exec.conf
@@ -14,4 +14,4 @@ exec /usr/lib/kdeconnectd
 exec env LD_PRELOAD=/usr/lib/spotify-adblock.so spotify %U
 exec telegram-desktop
 
-exec_always /usr/bin/zsh -c "source $HOME/.zshrc;sync_repos;"
+# exec_always /usr/bin/zsh -c "source $HOME/.zshrc;sync_repos;"
