Update 22:00 Fri, 08 Oct

--- a/.config/sway/conf.d/exec.conf
+++ b/.config/sway/conf.d/exec.conf
@@ -1,5 +1,5 @@
-exec_always ~/.config/waybar/launch.sh
 exec variety
+exec_always ~/.config/waybar/launch.sh
 exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec_always guake
 exec ~/import-gsettings.sh
@@ -14,4 +14,4 @@ exec /usr/lib/kdeconnectd
 exec env LD_PRELOAD=/usr/lib/spotify-adblock.so spotify %U
 exec telegram-desktop
 
-# exec_always /usr/bin/zsh -c "source $HOME/.zshrc;sync_repos;"
+exec /usr/bin/zsh -c "source $HOME/.zshrc;sync_repos;"
