--- a/.config/sway/conf.d/shortcuts.conf
+++ b/.config/sway/conf.d/shortcuts.conf
@@ -12,14 +12,15 @@ bindsym XF86AudioPrev exec  dbus-send --print-reply --dest=org.mpris.MediaPlayer
 bindsym Print exec grim -g "$(slurp -d)" - | wl-copy -t image/png
 bindsym Ctrl+Print exec grim -g "$(slurp -d)" ~/Pictures/$(date +'%s_grim.png')
 bindsym Shift+Print exec ~/.config/sway/screenshot.sh
+bindsym Scroll_Lock exec ~/.config/sway/vid.sh
 
-bindsym $mod+x kill
+bindsym --to-code $mod+x kill
 
 floating_modifier $mod
 
-bindsym $mod+d exec ~/.config/rofi/launchers/colorful/launcher.sh
-bindsym $mod+b exec ~/.config/rofi/bin/rofi-bluetooth
-bindsym $mod+c exec ~/.config/rofi/launchers/text/calc.sh
+bindsym --to-code $mod+d exec ~/.config/rofi/launchers/colorful/launcher.sh
+bindsym --to-code $mod+b exec ~/.config/rofi/bin/rofi-bluetooth
+bindsym --to-code $mod+c exec ~/.config/rofi/launchers/text/calc.sh
 
 bindsym --to-code $mod+j focus down
 bindsym --to-code $mod+k focus up
@@ -41,25 +42,25 @@ bindsym --to-code $mod+Shift+Down move down
 bindsym --to-code $mod+Shift+Up move up
 bindsym --to-code $mod+Shift+Right move right
 
-bindsym $mod+semicolon split h
-bindsym $mod+v split v
+bindsym --to-code $mod+semicolon split h
+bindsym --to-code $mod+v split v
 
-bindsym $mod+f fullscreen toggle
+bindsym --to-code $mod+f fullscreen toggle
 bindsym F12 exec /usr/bin/guake-toggle
 
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
+bindsym --to-code $mod+s layout stacking
+bindsym --to-code $mod+w layout tabbed
+bindsym --to-code $mod+e layout toggle split
 
 
-bindsym $mod+Mod1+space floating toggle
-bindsym $mod+Shift+l exec swaylock
-bindsym $mod+space focus mode_toggle
-bindsym $mod+a focus parent
+bindsym --to-code $mod+Mod1+space floating toggle
+bindsym --to-code $mod+Shift+l exec swaylock
+bindsym --to-code $mod+space focus mode_toggle
+bindsym --to-code $mod+a focus parent
 
-bindsym $mod+Shift+e exec ~/.config/rofi/applets/menu/powermenu.sh
-bindsym $mod+Shift+r exec ~/.config/waybar/launch.sh
-bindsym $mod+Shift+c reload
+bindsym --to-code $mod+Shift+e exec ~/.config/rofi/applets/menu/powermenu.sh
+bindsym --to-code $mod+Shift+r exec ~/.config/waybar/launch.sh
+bindsym --to-code $mod+Shift+c reload
 
 #
 # Scratchpad:
@@ -68,8 +69,8 @@ bindsym $mod+Shift+c reload
     # You can send windows there and get them back later.
 
     # Move the currently focused window to the scratchpad
-    bindsym $mod+Shift+minus move scratchpad
+    bindsym --to-code $mod+Shift+minus move scratchpad
 
     # Show the next scratchpad window or hide the focused scratchpad window.
     # If there are multiple scratchpad windows, this command cycles through them.
-    bindsym $mod+minus scratchpad show
+    bindsym --to-code $mod+minus scratchpad show
