--- a/.config/sway/conf.d/workspaces_and_monitors.conf
+++ b/.config/sway/conf.d/workspaces_and_monitors.conf
@@ -30,30 +30,30 @@ workspace $ws8 output $monitor_2
 workspace $ws7 output $monitor_2
 
 # switch to workspace
-bindsym $mod+1 workspace number $ws1
-bindsym $mod+2 workspace number $ws2
-bindsym $mod+3 workspace number $ws3
-bindsym $mod+4 workspace number $ws4
-bindsym $mod+5 workspace number $ws5
-bindsym $mod+6 workspace number $ws6
-bindsym $mod+7 workspace number $ws7
-bindsym $mod+8 workspace number $ws8
-bindsym $mod+9 workspace number $ws9
-bindsym $mod+0 workspace number $ws10
+bindsym --to-code $mod+1 workspace number $ws1
+bindsym --to-code $mod+2 workspace number $ws2
+bindsym --to-code $mod+3 workspace number $ws3
+bindsym --to-code $mod+4 workspace number $ws4
+bindsym --to-code $mod+5 workspace number $ws5
+bindsym --to-code $mod+6 workspace number $ws6
+bindsym --to-code $mod+7 workspace number $ws7
+bindsym --to-code $mod+8 workspace number $ws8
+bindsym --to-code $mod+9 workspace number $ws9
+bindsym --to-code $mod+0 workspace number $ws10
 
 # Cycle through active workspaces
 bindsym Mod1+Tab workspace back_and_forth
-bindsym $mod+Tab workspace next
-bindsym $mod+Shift+Tab workspace prev
+bindsym --to-code $mod+Tab workspace next
+bindsym --to-code $mod+Shift+Tab workspace prev
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace number $ws1; workspace $ws1
-bindsym $mod+Shift+2 move container to workspace number $ws2; workspace $ws2
-bindsym $mod+Shift+3 move container to workspace number $ws3; workspace $ws3
-bindsym $mod+Shift+4 move container to workspace number $ws4; workspace $ws4
-bindsym $mod+Shift+5 move container to workspace number $ws5; workspace $ws5
-bindsym $mod+Shift+6 move container to workspace number $ws6; workspace $ws6
-bindsym $mod+Shift+7 move container to workspace number $ws7; workspace $ws7
-bindsym $mod+Shift+8 move container to workspace number $ws8; workspace $ws8
-bindsym $mod+Shift+9 move container to workspace number $ws9; workspace $ws9
-bindsym $mod+Shift+0 move container to workspace number $ws10; workspace $ws10
+bindsym --to-code $mod+Shift+1 move container to workspace number $ws1; workspace $ws1
+bindsym --to-code $mod+Shift+2 move container to workspace number $ws2; workspace $ws2
+bindsym --to-code $mod+Shift+3 move container to workspace number $ws3; workspace $ws3
+bindsym --to-code $mod+Shift+4 move container to workspace number $ws4; workspace $ws4
+bindsym --to-code $mod+Shift+5 move container to workspace number $ws5; workspace $ws5
+bindsym --to-code $mod+Shift+6 move container to workspace number $ws6; workspace $ws6
+bindsym --to-code $mod+Shift+7 move container to workspace number $ws7; workspace $ws7
+bindsym --to-code $mod+Shift+8 move container to workspace number $ws8; workspace $ws8
+bindsym --to-code $mod+Shift+9 move container to workspace number $ws9; workspace $ws9
+bindsym --to-code $mod+Shift+0 move container to workspace number $ws10; workspace $ws10
