Update 17:57 Sat, 09 Oct

--- a/.config/sway/conf.d/shortcuts.conf
+++ b/.config/sway/conf.d/shortcuts.conf
@@ -13,6 +13,8 @@ bindsym Print exec grim -g "$(slurp -d)" - | wl-copy -t image/png
 bindsym Ctrl+Print exec grim -g "$(slurp -d)" ~/Pictures/$(date +'%s_grim.png')
 bindsym Shift+Print exec ~/.config/sway/screenshot.sh
 bindsym Scroll_Lock exec ~/.config/sway/vid.sh
+# q to quit swappy
+bindsym Pause exec wl-paste | swappy -f - -o - | wl-copy -t image/png
 
 bindsym --to-code $mod+x kill
 
