--- a/.config/sway/conf.d/for_window.conf
+++ b/.config/sway/conf.d/for_window.conf
@@ -1,5 +1,5 @@
 for_window [class="Spotify"] move to workspace $ws10
-for_window [app_id="gnome-[^t].+"] floating enable
+for_window [app_id="gnome[-.][^t].+"] floating enable
 for_window [app_id="guake"] floating enable
 for_window [app_id="guake"] border none
 for_window [app_id="guake"] resize set 100ppt 500
