--- a/.config/sway/config
+++ b/.config/sway/config
@@ -8,11 +8,12 @@ font pango:DejaVu Sans Mono 8
 focus_follows_mouse no
 
 
-# exec swayidle -w \
-# 	timeout 300 'swaymsg "output * dpms off"' \
-# 	timeout 1800 'swaylock' \
-# 	timeout 1805 'swaymsg "output * dpms off"' \
-# 	resume 'swaymsg "output * dpms on"'
+exec swayidle -w \
+	timeout 300 'swaymsg "output * dpms off"' \
+	resume 'swaymsg "output * dpms on"' \
+	timeout 1800 'swaylock' \
+	timeout 1805 'swaymsg "output * dpms off"' \
+	resume 'swaymsg "output * dpms on"'
 
 # include /etc/sway/config.d/*
 include ~/.config/sway/conf.d/*
