--- a/.config/sway/conf.d/inputs.conf
+++ b/.config/sway/conf.d/inputs.conf
@@ -1,6 +1,6 @@
 # exec setxkbmap us,ru -option 'grp:alt_shift_toggle'
-
-input 4152:4996:SteelSeries_Rival_Gaming_Mouse {
+# 4152:4996:SteelSeries_Rival_Gaming_Mouse
+input type:pointer {
     accel_profile flat
     pointer_accel -0.1
 }
