Update 21:50 Tue, 12 Oct

--- a/.config/sway/conf.d/exec.conf
+++ b/.config/sway/conf.d/exec.conf
@@ -1,4 +1,4 @@
-exec variety
+# exec variety
 exec_always ~/.config/waybar/launch.sh
 exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec_always guake
