--- a/.config/sway/conf.d/shortcuts.conf
+++ b/.config/sway/conf.d/shortcuts.conf
@@ -12,7 +12,7 @@ bindsym XF86AudioPrev exec  dbus-send --print-reply --dest=org.mpris.MediaPlayer
 bindsym Print exec grim -g "$(slurp -d)" - | wl-copy -t image/png
 bindsym Ctrl+Print exec grim -g "$(slurp -d)" ~/Pictures/$(date +'%s_grim.png')
 bindsym Shift+Print exec ~/.config/sway/screenshot.sh
-bindsym Scroll_Lock exec ~/.config/sway/vid.sh
+bindsym Scroll_Lock exec ~/.config/sway/vid_region.sh
 # q to quit swappy
 bindsym Pause exec wl-paste | swappy -f - -o - | wl-copy -t image/png
 
