--- a/.config/sway/config
+++ b/.config/sway/config
@@ -12,6 +12,7 @@ exec swayidle -w \
 	timeout 300 'swaymsg "output * dpms off"' \
 	resume 'swaymsg "output * dpms on"' \
 	timeout 1800 'swaylock' \
+	resume 'swaymsg "output * dpms on"' \
 	timeout 1805 'swaymsg "output * dpms off"' \
 	resume 'swaymsg "output * dpms on"'
 
