--- a/.config/sway/conf.d/inputs.conf
+++ b/.config/sway/conf.d/inputs.conf
@@ -1,6 +1,11 @@
 # exec setxkbmap us,ru -option 'grp:alt_shift_toggle'
 # 4152:4996:SteelSeries_Rival_Gaming_Mouse
-input type:pointer {
+input 4152:4996:SteelSeries_Rival_Gaming_Mouse {
+    accel_profile flat
+    pointer_accel -0.1
+}
+
+input 10007:20502:MOSART_Semi._Mi_Wireless_Mouse_Lite_Mouse {
     accel_profile flat
     pointer_accel -0.1
 }
