--- a/.config/sway/conf.d/shortcuts.conf
+++ b/.config/sway/conf.d/shortcuts.conf
@@ -15,6 +15,8 @@ bindsym Shift+Print exec ~/.config/sway/screenshot.sh
 bindsym Scroll_Lock exec ~/.config/sway/vid_region.sh
 # q to quit swappy
 bindsym Pause exec wl-paste | swappy -f - -o - | wl-copy -t image/png
+bindsym --whole-window BTN_LEFT+BTN_RIGHT seat - cursor press button8
+bindsym --whole-window --release BTN_LEFT+BTN_RIGHT seat - cursor release button8
 
 bindsym --to-code $mod+x kill
 
