--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -16,6 +16,9 @@
     "sway/window":{
         "max-length": 70
     },
+    "sway/workspaces":{
+    "enable-bar-scroll": true
+    },
     "sway/mode": {
         "format": "<span style=\"italic\">{}</span>"
     },
