--- a/.config/sway/conf.d/for_window.conf
+++ b/.config/sway/conf.d/for_window.conf
@@ -7,11 +7,11 @@ for_window [app_id="guake"] resize set 100ppt 500
 for_window [app_id="guake"] floating_maximum_size set 100ppt 1080
 for_window [app_id="guake"] move position 0 0
 
-for_window [class="Guake"] floating enable
-for_window [class="Guake"] border none
-for_window [class="Guake"] resize set 100ppt 500
-for_window [class="Guake"] floating_maximum_size set 100ppt 1080
-for_window [class="Guake"] move position 0 0
+for_window [class="[Gg]uake"] floating enable
+for_window [class="[Gg]uake"] border none
+for_window [class="[Gg]uake"] resize set 100ppt 500
+for_window [class="[Gg]uake"] floating_maximum_size set 100ppt 1080
+for_window [class="[Gg]uake"] move position 0 0
 
 for_window [app_id="anki"] floating enable
 for_window [app_id="pavucontrol"] floating enable
