--- a/.config/sway/conf.d/inputs.conf
+++ b/.config/sway/conf.d/inputs.conf
@@ -2,12 +2,14 @@
 # 4152:4996:SteelSeries_Rival_Gaming_Mouse
 input 4152:4996:SteelSeries_Rival_Gaming_Mouse {
     accel_profile flat
-    pointer_accel 0.15
+    # pointer_accel 0.15
+    pointer_accel -0.2
 }
 
 input 10007:20502:MOSART_Semi._Mi_Wireless_Mouse_Lite_Mouse {
     accel_profile flat
     pointer_accel -0.2
+    # pointer_accel 0.15
 }
 
 
