Update 22:00 Sat, 06 Nov

--- a/.config/sway/conf.d/for_window.conf
+++ b/.config/sway/conf.d/for_window.conf
@@ -7,6 +7,8 @@ for_window [app_id="guake"] resize set 100ppt 500
 for_window [app_id="guake"] floating_maximum_size set 100ppt 1080
 for_window [app_id="guake"] move position 0 0
 
+for_window [class="darksoulsii.exe"] border none
+
 for_window [class="[Gg]uake"] floating enable
 for_window [class="[Gg]uake"] border none
 for_window [class="[Gg]uake"] resize set 100ppt 500
