--- a/.config/sway/conf.d/shortcuts.conf
+++ b/.config/sway/conf.d/shortcuts.conf
@@ -71,8 +71,13 @@ bindsym --to-code $mod+Shift+c reload
     # You can send windows there and get them back later.
 
     # Move the currently focused window to the scratchpad
+    bindsym --to-code $mod+Shift+Period move scratchpad
+    bindsym --to-code $mod+Alt+Period move scratchpad
+
     bindsym --to-code $mod+Shift+minus move scratchpad
+    bindsym --to-code $mod+Alt+minus move scratchpad
 
     # Show the next scratchpad window or hide the focused scratchpad window.
     # If there are multiple scratchpad windows, this command cycles through them.
+    bindsym --to-code $mod+Period scratchpad show
     bindsym --to-code $mod+minus scratchpad show
