Update 22:00 Sun, 07 Nov

--- a/.config/sway/conf.d/for_window.conf
+++ b/.config/sway/conf.d/for_window.conf
@@ -20,4 +20,5 @@ for_window [app_id="pavucontrol"] floating enable
 for_window [app_id="pavucontrol"] resize set 500 400
 for_window [app_id="pavucontrol"] move position mouse
 for_window [app_id="pavucontrol"] move up 30
+for_window [app_id="zenity"] floating enable
 for_window [class="Steam"] floating enable
