--- a/.config/sway/conf.d/shortcuts.conf
+++ b/.config/sway/conf.d/shortcuts.conf
@@ -74,10 +74,14 @@ bindsym --to-code $mod+Shift+c reload
     bindsym --to-code $mod+Shift+Period move scratchpad
     bindsym --to-code $mod+Alt+Period move scratchpad
 
+    bindsym --to-code $mod+Shift+z move scratchpad
+
     bindsym --to-code $mod+Shift+minus move scratchpad
     bindsym --to-code $mod+Alt+minus move scratchpad
 
     # Show the next scratchpad window or hide the focused scratchpad window.
     # If there are multiple scratchpad windows, this command cycles through them.
+    bindsym --to-code $mod+z scratchpad show
     bindsym --to-code $mod+Period scratchpad show
     bindsym --to-code $mod+minus scratchpad show
+    bindsym --to-code $mod+t [app_id="telegramdesktop"] scratchpad show
