--- a/.config/sway/conf.d/for_window.conf
+++ b/.config/sway/conf.d/for_window.conf
@@ -22,3 +22,10 @@ for_window [app_id="pavucontrol"] move position mouse
 for_window [app_id="pavucontrol"] move up 30
 for_window [app_id="zenity"] floating enable
 for_window [class="Steam"] floating enable
+
+for_window [title="Open File"] floating enable
+
+for_window [window_role = "pop-up"] floating enable
+for_window [window_role = "bubble"] floating enable
+for_window [window_role = "dialog"] floating enable
+for_window [window_type = "dialog"] floating enable
