--- a/.config/i3/config
+++ b/.config/i3/config
@@ -271,7 +271,7 @@ exec --no-startup-id ~/.dropbox-dist/dropboxd
 exec --no-startup-id /usr/lib/kdeconnectd
 
 #Bg
-exec_always feh --bg-fill ~/.config/i3/bg/11-0-Day.jpg
+exec_always feh --bg-fill ~/.config/i3/bg/11-1.jpg
 # exec --no-startup-id variety
 
 #redshift night light
