--- a/.config/i3/config
+++ b/.config/i3/config
@@ -26,7 +26,7 @@ default_border pixel 0
 default_floating_border normal
 
 # Hide borders
-hide_edge_borders smart
+hide_edge_borders both
 
 # xprop
 # #---Dropdown Windows---# #
