--- a/.config/i3/config
+++ b/.config/i3/config
@@ -22,11 +22,11 @@ set $mod Mod4
 
 
 # Configure border style <normal|1pixel|pixel xx|none|pixel>
-default_border pixel 0
+default_border pixel 5
 default_floating_border normal
 
 # Hide borders
-hide_edge_borders both
+hide_edge_borders smart
 
 # xprop
 # #---Dropdown Windows---# #
