Update 19:32 Sun, 21 Nov

--- a/.config/qt5ct/qt5ct.conf
+++ b/.config/qt5ct/qt5ct.conf
@@ -1,7 +1,7 @@
 [Appearance]
 color_scheme_path=/usr/share/qt5ct/colors/darker.conf
 custom_palette=true
-icon_theme=breeze-dark
+icon_theme=ePapirus-Dark
 standard_dialogs=gtk3
 style=Breeze
 
@@ -25,4 +25,8 @@ underline_shortcut=1
 wheel_scroll_lines=3
 
 [SettingsWindow]
-geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\n\0\0\0\0\x14\0\0\r\xba\0\0\x4\x32\0\0\n\0\0\0\0\x14\0\0\rT\0\0\x4\x32\0\0\0\x1\x2\0\0\0\a\x80\0\0\n\0\0\0\0\x14\0\0\r\xba\0\0\x4\x32)
+geometry=@ByteArray(\x1\xd9\xd0\xcb\0\x3\0\0\0\0\n\0\0\0\0\x14\0\0\xe\xf8\0\0\x3\x98\0\0\n\0\0\0\0\x14\0\0\xe\xf8\0\0\x3\x98\0\0\0\x1\0\0\0\0\a\x80\0\0\n\0\0\0\0\x14\0\0\xe\xf8\0\0\x3\x98)
+
+[Troubleshooting]
+force_raster_widgets=1
+ignored_applications=@Invalid()
