Update 08:44 Fri, 03 Dec

--- a/.config/sway/conf.d/exec.conf
+++ b/.config/sway/conf.d/exec.conf
@@ -1,7 +1,7 @@
 # exec variety
 exec_always ~/.config/waybar/launch.sh
 exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec_always guake
+exec_always guake  2> ~/guake.log
 exec ~/import-gsettings.sh
 exec redshift-gtk
 
