Update 15:34 Fri, 03 Dec

--- a/.config/sway/conf.d/for_window.conf
+++ b/.config/sway/conf.d/for_window.conf
@@ -24,6 +24,7 @@ for_window [app_id="zenity"] floating enable
 for_window [class="Steam"] floating enable
 
 for_window [title="Open File"] floating enable
+for_window [title="Choose Files?"] floating enable
 
 for_window [window_role = "pop-up"] floating enable
 for_window [window_role = "bubble"] floating enable
