--- a/.config/sway/conf.d/for_window.conf
+++ b/.config/sway/conf.d/for_window.conf
@@ -1,5 +1,7 @@
 for_window [class="Spotify"] move to workspace $ws10
 for_window [app_id="gnome[-.][^t].+"] floating enable
+for_window [app_id="org.gnome.Nautilus"] move scratchpad
+for_window [app_id="org.gnome.Nautilus"] scratchpad show
 
 for_window [app_id="guake"] floating enable
 for_window [app_id="guake"] border none
