Update 21:02 Mon, 03 Jan

--- a/.config/sway/conf.d/for_window.conf
+++ b/.config/sway/conf.d/for_window.conf
@@ -22,6 +22,7 @@ for_window [app_id="pavucontrol"] floating enable
 for_window [app_id="pavucontrol"] resize set 500 400
 for_window [app_id="pavucontrol"] move position mouse
 for_window [app_id="pavucontrol"] move up 30
+for_window [app_id="pavucontrol"] move left 100
 for_window [app_id="blueman*"] floating enable
 for_window [app_id="blueman*"] resize set 500 400
 for_window [app_id="blueman*"] move position mouse
