Update 21:03 Mon, 03 Jan

--- a/.config/sway/conf.d/exec.conf
+++ b/.config/sway/conf.d/exec.conf
@@ -14,5 +14,6 @@ exec /usr/lib/kdeconnectd
 exec env LD_PRELOAD=/usr/lib/spotify-adblock.so spotify %U
 exec telegram-desktop
 exec twitch-indicator
+exec blueman-applet
 
 exec /usr/bin/zsh -c "source $HOME/.zshrc;sync_repos;"
