Update 22:00 Tue, 04 Jan

--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -135,7 +135,8 @@
             "default": ""
         },
         "return-type": "json",
-        "on-click": "~/.config/rofi/bin/rofi-bluetooth"
+        // "on-click": "~/.config/rofi/bin/rofi-bluetooth"
+        "on-click": "blueman-manager"
     },
     "pulseaudio": {
         // "scroll-step": 1, // %, can be a float
