Update 22:00 Fri, 07 Jan

--- a/.config/sway/conf.d/workspaces_and_monitors.conf
+++ b/.config/sway/conf.d/workspaces_and_monitors.conf
@@ -14,6 +14,8 @@ assign [class="discord"] $ws8
 assign [class="whatsapp-nativefier-d40211"] $ws8
 assign [class="qBittorrent"] $ws8
 
+assign [app_id="com.github.geigi.cozy"] $ws7
+
 set $monitor_1 DP-1
 set $monitor_2 DVI-D-1
 
