Update 22:00 Fri, 14 Jan

--- a/.config/sway/conf.d/exec.conf
+++ b/.config/sway/conf.d/exec.conf
@@ -15,5 +15,6 @@ exec env LD_PRELOAD=/usr/lib/spotify-adblock.so spotify %U
 exec telegram-desktop
 exec twitch-indicator
 exec blueman-applet
+exec pomotroid
 
 exec /usr/bin/zsh -c "source $HOME/.zshrc;sync_repos;"
