Update 22:00 Mon, 24 Jan

--- a/.config/redshift.conf
+++ b/.config/redshift.conf
@@ -1,9 +1,12 @@
 [redshift]
-location-provider=manual
+#location-provider=manual
 temp-night=2100
 
-brightness-night=0.85
+brightness-night=0.7
 
-[manual]
-lat=55.76
-lon=49.03
+dawn-time=6:00-7:45
+dusk-time=19:00-20:00
+
+# [manual]
+# lat=55.76
+# lon=49.03
