Update 11:02 Tue, 25 Jan

--- a/.config/sway/conf.d/workspaces_and_monitors.conf
+++ b/.config/sway/conf.d/workspaces_and_monitors.conf
@@ -24,7 +24,7 @@ output $monitor_1 pos 0 0 mode 2560x1080@74.991Hz
 output $monitor_2 scale 1
 output $monitor_2 pos 2560 0 res 1920x1080
 
-output * bg ~/.config/sway/bg/wallhaven-n6rvjq.jpg fill
+output * bg ~/.config/i3/bg/11-1.jpg fill
 
 workspace $ws1 output $monitor_1
 workspace $ws2 output $monitor_1
