--- a/.config/brave-flags.conf
+++ b/.config/brave-flags.conf
@@ -1,5 +1,5 @@
---enable-features=UseOzonePlatform
---ozone-platform=wayland
---enable-gpu-rasterization
---enable-zero-copy
---disable-gpu-driver-bug-workarounds
+#--enable-features=UseOzonePlatform
+#--ozone-platform=wayland
+#--enable-gpu-rasterization
+#--enable-zero-copy
+#--disable-gpu-driver-bug-workarounds
