--- a/.config/OpenTabletDriver/settings.json
+++ b/.config/OpenTabletDriver/settings.json
@@ -34,7 +34,7 @@
         "RelativeResetDelay": "00:00:00.1000000"
       },
       "Bindings": {
-        "TipActivationPressure": 35.0,
+        "TipActivationThreshold": 0.0,
         "TipButton": {
           "Path": "OpenTabletDriver.Desktop.Binding.MouseBinding",
           "Settings": [
@@ -45,7 +45,7 @@
           ],
           "Enable": true
         },
-        "EraserActivationPressure": 0.0,
+        "EraserActivationThreshold": 0.0,
         "EraserButton": null,
         "PenButtons": [
           null,
@@ -60,7 +60,7 @@
     {
       "Tablet": "Gaomon S620",
       "OutputMode": {
-        "Path": "OpenTabletDriver.Desktop.Output.AbsoluteMode",
+        "Path": "OpenTabletDriver.Desktop.Output.LinuxArtistMode",
         "Settings": [],
         "Enable": true
       },
@@ -91,7 +91,7 @@
         "RelativeResetDelay": "00:00:00.1000000"
       },
       "Bindings": {
-        "TipActivationPressure": 0.0,
+        "TipActivationThreshold": 0.0,
         "TipButton": {
           "Path": "OpenTabletDriver.Desktop.Binding.MouseBinding",
           "Settings": [
@@ -102,7 +102,7 @@
           ],
           "Enable": true
         },
-        "EraserActivationPressure": 0.0,
+        "EraserActivationThreshold": 0.0,
         "EraserButton": null,
         "PenButtons": [
           null,
