Update 21:43 Wed, 02 Feb

--- a/.config/OpenTabletDriver/settings.json
+++ b/.config/OpenTabletDriver/settings.json
@@ -60,7 +60,7 @@
     {
       "Tablet": "Gaomon S620",
       "OutputMode": {
-        "Path": "OpenTabletDriver.Desktop.Output.LinuxArtistMode",
+        "Path": "OpenTabletDriver.Desktop.Output.AbsoluteMode",
         "Settings": [],
         "Enable": true
       },
