--- a/.config/i3/config
+++ b/.config/i3/config
@@ -314,3 +314,5 @@ exec_always --no-startup-id /usr/bin/zsh -c "source $HOME/.zshrc;sync_repos;"
 # switch to workspace with urgent window automatically
 # for_window [urgent=latest] focus
 # focus_on_window_activation focus
+
+include ~/.config/i3/conf.d/*
