--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -6,12 +6,12 @@ gtk-cursor-theme-size=0
 gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=1
 gtk-font-name=Cantarell 11
-gtk-icon-theme-name=breeze-dark
+gtk-icon-theme-name=breeze
 gtk-menu-images=1
-gtk-theme-name=Breeze-Dark
+gtk-theme-name=Adwaita
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
 gtk-xft-antialias=1
 gtk-xft-hinting=1
-gtk-xft-hintstyle=hintslight
+gtk-xft-hintstyle=hintfull
 gtk-xft-rgba=none
