--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -82,8 +82,11 @@ modules-left = i3
 modules-center =
 modules-right =  weather  popup-calendar xbacklight pulseaudio wireguard bluetooth powerapplet
 tray-position = none
-tray-padding = 2
+tray-padding = 8
+tray-maxsize = 20
+tray-transparent = true
 ; tray-background = #0063ff
+tray-scale = 1.0
 
 ; wm-restack = bspwm
 wm-restack = i3
