--- a/.config/i3/config
+++ b/.config/i3/config
@@ -264,7 +264,7 @@ bindsym $mod+r mode "resize"
 #Auth agent
 exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
-exec pasystray
+exec pasystray --symbolic-icons
 #Dropbox
 exec --no-startup-id ~/.dropbox-dist/dropboxd
 #KDEConnect
