--- a/.config/i3/config
+++ b/.config/i3/config
@@ -315,4 +315,4 @@ exec_always --no-startup-id /usr/bin/zsh -c "source $HOME/.zshrc;sync_repos;"
 # focus_on_window_activation focus
 
 include ~/.config/i3/conf.d/*
-exec pasystray --symbolic-icons
+exec pasystray symbolic-icons
