--- a/.config/i3/config
+++ b/.config/i3/config
@@ -287,6 +287,7 @@ exec --no-startup-id setxkbmap us,ru -option 'grp:alt_shift_toggle'
 # Find mouse automatically
 exec --no-startup-id xinput --set-prop 14 'libinput Accel Profile Enabled' 0, 1
 exec --no-startup-id xinput --set-prop 15 'libinput Accel Profile Enabled' 0, 1
+exec --no-startup-id xinput --set-prop 18 'libinput Accel Profile Enabled' 0, 1
 exec --no-startup-id xinput --set-prop 2 'libinput Accel Profile Enabled' 0, 1
 exec --no-startup-id xinput --set-prop 12 'libinput Accel Profile Enabled' 0, 1
 exec --no-startup-id xinput --set-prop 13 'libinput Accel Profile Enabled' 0, 1
