--- a/.config/i3/conf.d/shortcuts.conf
+++ b/.config/i3/conf.d/shortcuts.conf
@@ -2,10 +2,10 @@
 #
 # Scratchpad:
 #
-bindsym --to-code $mod+Shift+Period move scratchpad
-bindsym --to-code $mod+Alt+Period move scratchpad
+bindsym  $mod+Shift+Period move scratchpad
+bindsym  $mod+Alt+Period move scratchpad
 
-bindsym --to-code $mod+Shift+z move scratchpad
+bindsym  $mod+Shift+z move scratchpad
 
-bindsym --to-code $mod+Shift+minus move scratchpad
-bindsym --to-code $mod+Alt+minus move scratchpad
+bindsym  $mod+Shift+minus move scratchpad
+bindsym  $mod+Alt+minus move scratchpad
