Update 11:44 Thu, 03 Feb

--- a/.config/i3/conf.d/shortcuts.conf
+++ b/.config/i3/conf.d/shortcuts.conf
@@ -9,3 +9,7 @@ bindsym  $mod+Shift+z move scratchpad
 
 bindsym  $mod+Shift+minus move scratchpad
 bindsym  $mod+Alt+minus move scratchpad
+
+bindsym  $mod+z scratchpad show
+bindsym  $mod+Period scratchpad show
+bindsym  $mod+minus scratchpad show
