--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -77,6 +77,7 @@ font-4 = ShureTechMono Nerd Font:fontformat=truetype:size=14;3
 font-5 = Weather Icons:size=12;5
 font-6 = MaterialIcons:size=15;6
 font-7 = NotoEmoji:fontformat=truetype:scale=7;4
+font-7 = FontAwesome:pixelsize=12;4
 
 modules-left = i3
 modules-center =
@@ -127,9 +128,10 @@ click-left = ~/.config/polybar/popup-calendar.sh --popup &
 
 [module/scratchpad-indicator]
 type = custom/script
-exec = i3-msg -t get_tree | jq ".nodes|.[]|.|.nodes|.[]|.nodes|.[]|select(.name==\"__i3_scratch\")|.floating_nodes|.[]|.nodes|.[]|.name"
+exec = i3-msg -t get_tree | jq "[.nodes|.[]|.|.nodes|.[]|.nodes|.[]|select(.name==\"__i3_scratch\")|.floating_nodes|.[]|select(.scratchpad_state==\"changed\")]|length"
 click-left = i3-msg 'scratchpad show'
 click-right = i3-msg 'move scratchpad'
+format-prefix = "🗗"
 
 
 [module/work-rest-switch]
