--- a/.config/i3/config
+++ b/.config/i3/config
@@ -48,8 +48,8 @@ for_window [class="Anki"] floating enable
 for_window [class="Pavucontrol"] floating enable
 for_window [class="Pavucontrol"] resize set 500 400
 for_window [class="Pavucontrol"] move position mouse
-for_window [app_id="pavucontrol"] move up 30
-for_window [app_id="pavucontrol"] move left 100
+for_window [class="Pavucontrol"] move up 30
+for_window [class="Pavucontrol"] move left 100
 for_window [class="Yad" title="yad-calendar"] floating enable
 
 assign [class="TelegramDesktop"] $ws10
