--- a/.config/i3/conf.d/workspaces_and_monitors.conf
+++ b/.config/i3/conf.d/workspaces_and_monitors.conf
@@ -56,3 +56,4 @@ assign [class="TelegramDesktop"] $ws10
 assign [class="discord"] $ws8
 assign [class="whatsapp-nativefier-d40211"] $ws8
 assign [class="qBittorrent"] $ws8
+for_window [class="Spotify"] move to workspace $ws10
