Update 12:31 Thu, 03 Feb

--- a/.config/i3/conf.d/for_window.conf
+++ b/.config/i3/conf.d/for_window.conf
@@ -19,3 +19,6 @@ for_window [class="Pavucontrol"] move position mouse
 for_window [class="Pavucontrol"] move up 30
 for_window [class="Pavucontrol"] move left 100
 for_window [class="Yad" title="yad-calendar"] floating enable
+
+for_window [class="Nautilus"] move scratchpad
+for_window [class="Nautilus"] scratchpad show
