--- a/.config/i3/conf.d/for_window.conf
+++ b/.config/i3/conf.d/for_window.conf
@@ -22,3 +22,8 @@ for_window [class="Yad" title="yad-calendar"] floating enable
 
 for_window [class="Nautilus"] move scratchpad
 for_window [class="Nautilus"] scratchpad show
+
+for_window [class="Blueman*"] floating enable
+for_window [class="Blueman*"] resize set 500 400
+for_window [class="Blueman*"] move position mouse
+for_window [class="Blueman*"] move up 30
