Update 12:39 Thu, 03 Feb

--- a/.config/i3/conf.d/exec.conf
+++ b/.config/i3/conf.d/exec.conf
@@ -10,6 +10,8 @@ exec_always feh --bg-fill ~/.config/i3/bg/530895_souredapple_clouds.png
 #redshift night light
 exec --no-startup-id redshift-gtk
 
+exec ~/import-gsettings.sh
+
 #Guake
 exec_always  guake
 
