Update 13:14 Thu, 03 Feb

--- a/.config/i3/conf.d/for_window.conf
+++ b/.config/i3/conf.d/for_window.conf
@@ -1,7 +1,7 @@
 # #---Dropdown Windows---# #
 # General dropdown window traits. The order can matter.
 for_window [instance="gnome-[^t].+"] floating enable
-# for_window [instance="guake"] floating enable
+for_window [instance="guake"] floating enable
 for_window [window_role="ranger"] floating enable
 for_window [window_role="ranger"] resize set 1000 600
 for_window [window_role="ranger"] move position center
