Update 22:00 Thu, 03 Feb

--- a/.config/i3/conf.d/exec.conf
+++ b/.config/i3/conf.d/exec.conf
@@ -14,7 +14,10 @@ exec --no-startup-id redshift-gtk
 exec_always  guake
 
 #Language switch
-exec --no-startup-id setxkbmap us,ru -option 'grp:alt_shift_toggle'
+exec_always --no-startup-id setxkbmap us,ru -option 'grp:alt_shift_toggle'
+
+exec flameshot
+exec blueman-applet
 
 # Mouse acceleration
 exec_always for id in $(xinput list | grep "pointer" | cut -d '=' -f 2 | cut -f 1); do xinput --set-prop $id 'libinput Accel Profile Enabled' 0, 1; done
