--- a/.config/i3/conf.d/for_window.conf
+++ b/.config/i3/conf.d/for_window.conf
@@ -21,6 +21,7 @@ for_window [class="Pavucontrol"] move left 100
 for_window [class="Yad" title="yad-calendar"] floating enable
 
 for_window [class="Nautilus"] move scratchpad
+for_window [class="Nautilus"] resize set 1400 800
 for_window [class="Nautilus"] scratchpad show
 
 for_window [class="Blueman*"] floating enable
