Update 13:25 Sun, 06 Feb

--- a/.config/environment.d/env.conf
+++ b/.config/environment.d/env.conf
@@ -1,8 +1,8 @@
-QT_QPA_PLATFORM=wayland
-XDG_CURRENT_DESKTOP=sway
+# QT_QPA_PLATFORM=wayland
+# XDG_CURRENT_DESKTOP=sway
 GTK_USE_PORTAL=0
 QT_IM_MODULE=fcitx
 XMODIFIERS=@im=fcitx
 GTK_IM_MODULE=fcitx
 QT_QPA_PLATFORMTHEME="qt5ct"
-QT_WAYLAND_DISABLE_WINDOWDECORATION=1
+# QT_WAYLAND_DISABLE_WINDOWDECORATION=1
