--- a/.config/i3/conf.d/for_window.conf
+++ b/.config/i3/conf.d/for_window.conf
@@ -24,6 +24,9 @@ for_window [class="Nautilus"] move scratchpad
 for_window [class="Nautilus"] resize set 1400 800
 for_window [class="Nautilus"] scratchpad show
 
+for_window [name="Clocks"] floating enable
+for_window [name="Clocks"] resize set 400 300
+
 for_window [class="Blueman*"] floating enable
 for_window [class="Blueman*"] resize set 500 400
 for_window [class="Blueman*"] move position mouse
