Update 16:03 Sat, 12 Feb

--- a/.config/i3/conf.d/for_window.conf
+++ b/.config/i3/conf.d/for_window.conf
@@ -24,8 +24,8 @@ for_window [class="Nautilus"] move scratchpad
 for_window [class="Nautilus"] resize set 1400 800
 for_window [class="Nautilus"] scratchpad show
 
-for_window [name="Clocks"] floating enable
-for_window [name="Clocks"] resize set 400 300
+for_window [instance="Clocks"] floating enable
+for_window [instance="Clocks"] resize set 400 300
 
 for_window [class="Blueman*"] floating enable
 for_window [class="Blueman*"] resize set 500 400
