--- a/.config/i3/conf.d/for_window.conf
+++ b/.config/i3/conf.d/for_window.conf
@@ -24,8 +24,8 @@ for_window [class="Nautilus"] move scratchpad
 for_window [class="Nautilus"] resize set 1400 800
 for_window [class="Nautilus"] scratchpad show
 
-for_window [class="org.gnome.clocks"] floating enable
-for_window [class="org.gnome.clocks"] resize set 400 300
+for_window [class="Org.gnome.clocks"] floating enable
+for_window [class="Org.gnome.clocks"] resize set 400 300
 
 for_window [class="Blueman*"] floating enable
 for_window [class="Blueman*"] resize set 500 400
