Update 16:04 Sat, 12 Feb

--- a/.config/i3/conf.d/for_window.conf
+++ b/.config/i3/conf.d/for_window.conf
@@ -25,6 +25,7 @@ for_window [class="Nautilus"] resize set 1400 800
 for_window [class="Nautilus"] scratchpad show
 
 for_window [class="Org.gnome.clocks"] floating enable
+for_window [class="Org.gnome.clocks"] move center
 for_window [class="Org.gnome.clocks"] resize set 400 300
 
 for_window [class="Blueman*"] floating enable
