Update 16:05 Sat, 12 Feb

--- a/.config/i3/conf.d/for_window.conf
+++ b/.config/i3/conf.d/for_window.conf
@@ -25,7 +25,7 @@ for_window [class="Nautilus"] resize set 1400 800
 for_window [class="Nautilus"] scratchpad show
 
 for_window [class="Org.gnome.clocks"] floating enable
-for_window [class="Org.gnome.clocks"] move cursor
+for_window [class="Org.gnome.clocks"] move position mouse
 for_window [class="Org.gnome.clocks"] resize set 400 300
 
 for_window [class="Blueman*"] floating enable
