Update 13:14 Sun, 13 Feb

--- a/.config/i3/conf.d/exec.conf
+++ b/.config/i3/conf.d/exec.conf
@@ -32,7 +32,7 @@ exec --no-startup-id nm-applet
 # screen before suspend. Use loginctl lock-session to lock your screen.
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
-exec --no-startup-id dunst
+exec_always --no-startup-id dunst
 exec_always --no-startup-id fcitx -d
 
 exec_always --no-startup-id ~/.config/polybar/launch.sh
