--- a/.config/OpenTabletDriver/settings.json
+++ b/.config/OpenTabletDriver/settings.json
@@ -67,20 +67,20 @@
       "Filters": [],
       "AbsoluteModeSettings": {
         "Display": {
-          "Width": 1180.0,
+          "Width": 1080.0,
           "Height": 1080.0,
           "X": 1280.0,
           "Y": 540.0,
           "Rotation": 0.0
         },
         "Tablet": {
-          "Width": 64.46296,
-          "Height": 59.0,
+          "Width": 50.0,
+          "Height": 50.0,
           "X": 82.55,
-          "Y": 69.40309,
+          "Y": 73.43289,
           "Rotation": -5.0
         },
-        "EnableClipping": true,
+        "EnableClipping": false,
         "EnableAreaLimiting": false,
         "LockAspectRatio": true
       },
