--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -81,7 +81,7 @@ font-8 = FontAwesome:size=12;5
 
 modules-left = i3
 modules-center =
-modules-right = weather  popup-calendar xbacklight bluetooth pulseaudio wireguard  powerapplet
+modules-right = scratchpad-indicator weather  popup-calendar xbacklight bluetooth pulseaudio wireguard  powerapplet
 tray-position = none
 tray-padding = 10
 tray-maxsize = 18
@@ -90,36 +90,21 @@ tray-transparent = true
 tray-scale = 1.0
 
 ; wm-restack = bspwm
-; wm-restack = i3
+wm-restack = i3
 
 ; override-redirect = false
 
 ;scroll-up = bspwm-desknext
 ;scroll-down = bspwm-deskprev
 
-; scroll-up = "#i3.prev"
-; scroll-down = "#i3.next"
+scroll-up = "#i3.prev"
+scroll-down = "#i3.next"
 
 ; scroll-up = i3wm-wsnext
 ; scroll-down = i3wm-wsprev
 
 cursor-click = pointer
 ; cursor-scroll = ns-resize
-
-[module/ewmh]
-type = internal/xworkspaces
-
-; Only show workspaces defined on the same output as the bar
-;
-; Useful if you want to show monitor specific workspaces
-; on different bars
-;
-; Default: false
-pin-workspaces = true
-
-; Create click handler used to focus desktop
-; Default: true
-enable-click = false
 
 [module/xwindow]
 type = internal/xwindow
